--- a/back/app/Resources/views/security/login.html.twig
+++ b/back/app/Resources/views/security/login.html.twig
@@ -1,38 +1,27 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <div class="container mt-5">
-        <div class="row">
-            <div class="col-10 offset-1 col-md-6 offset-md-3 shadow bg-white"  id="col-login">
-                <h2 class="text-center mb-5">Identifiez-vous</h2>
-                <div class="row">
-                    <div class="col-md-8 offset-md-2 col-12">
-                        {% if error %}
-                            <span class="invalid-feedback d-block mb-4">
-                                <span class="d-block">
-                                    <span class="initialism form-error-icon badge badge-danger">Erreur</span>
-                                    <br>
-                                    <span class="form-error-message">Mot de passe ou Email invalide !</span>
-                                </span>
-                            </span>
-                        {% endif %}
-                        <form action="" method="post">
-                            <div class="form-group">
-                                <label for="exampleInputEmail1">Email</label>
-                                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="nom@exemple.fr" name="_username" value="{{ last_username }}">
-                            </div>
-                            <div class="form-group">
-                                <label for="exampleInputPassword1">Mot de passe</label>
-                                <input type="password" class="form-control" id="exampleInputPassword1" name="_password">
-                                <a href="" class="a-login text-left ml-2"> Mot de passe oublié ?</a>
-                            </div>
-                            <button type="submit" class="btn btn-primary AMO-button mt-4 mb-4">Connexion</button>
-                        </form>
-                    </div>
-                    <a href="/" class="a-login text-center ml-2">Retour à l'accueil</a>
-                </div>
-            </div>
-        </div>
-    </div>
+    {# templates/security/login.html.twig #}
+    {# ... you will probably extend your base template, like base.html.twig #}
+
+    {% if error %}
+        <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+    {% endif %}
+
+    <form action="{{ path('login') }}" method="post">
+        <label for="username">Username:</label>
+        <input type="text" id="username" name="_username" value="{{ last_username }}" />
+
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="_password" />
+
+        {#
+            If you want to control the URL the user
+            is redirected to on success (more details below)
+            <input type="hidden" name="_target_path" value="/account" />
+        #}
+
+        <button type="submit">login</button>
+    </form>
 
 {% endblock %}
