--- a/back/app/Resources/views/profil/skill.html.twig
+++ b/back/app/Resources/views/profil/skill.html.twig
@@ -2,5 +2,21 @@
 
 {% block body %}
 
+<h1>HELLO</h1>
+<section class="container">
+
+    <div class="row">
+    {{ form_start(editForm) }}
+        <div class="form-group row align-items-center justify-content-center px-auto mt-3 mb-5">
+            <button type="submit" value="Valider" class="btn btn-primary">Valider</button>
+        </div>
+    {{ form_end(editForm) }}
+    </div>
+
+
+
+</section>
+
+
 
 {% endblock %}
