--- a/back/app/Resources/views/profil/project_list.html.twig
+++ b/back/app/Resources/views/profil/project_list.html.twig
@@ -1,6 +1,6 @@
+{% extends 'base.html.twig' %}
 
-
-{% block content %}
+{% block body %}
 
 <section id="" class="container bg-white pt-3 pb-1 px-5">
     <div class="row justify-content-center">
