--- a/back/app/Resources/views/profil/picture_add.html.twig
+++ b/back/app/Resources/views/profil/picture_add.html.twig
@@ -1,6 +1,6 @@
+{% extends 'base.html.twig' %}
 
-
-{% block content %}
+{% block body %}
     
     <div class="container bg-white" id="container-edit-project">
         <div class="row text-center">
