--- a/back/app/Resources/views/profil/project_edit.html.twig
+++ b/back/app/Resources/views/profil/project_edit.html.twig
@@ -8,7 +8,7 @@
                 {{ form_row (edit_form.projectTitle) }}
                 {{ form_row (edit_form.projectDescription) }}
 
-                <button type="submit" class="btn btn-primary border-color-blue background-color-blue"/><i class="fas fa-pencil-alt mr-2"></i>Mettre à jour</button>
+                <button type="submit" class="btn btn-primary"/><i class="fas fa-pencil-alt mr-2"></i>Mettre à jour</button>
                 {{ form_end(edit_form) }}
             </div>
         </div>
