--- a/back/app/Resources/views/profil/index.html.twig
+++ b/back/app/Resources/views/profil/index.html.twig
@@ -24,7 +24,10 @@
                     {{ user.phoneNumber }}
                 </div>
                 <div class="card-body text-info">
-                    {{ user.profilPicture }}
+                    <img src="{{ user.profilPicture}}">
+                </div>
+                <div class="card-body text-info">
+                    <img src="{{ user.coverPicture}}">
                 </div>
                 <div class="card-body text-info">
                     {{ user.wildPromo }}
