--- a/back/app/Resources/views/base.html.twig
+++ b/back/app/Resources/views/base.html.twig
@@ -4,9 +4,13 @@
         <meta charset="UTF-8" />
         <title>{% block title %}AdopteUnWilder{% endblock %}</title>
 
-        {% block stylesheets %}{% endblock %}
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
-        <link rel="stylesheet" href="{{ asset('assets/css/styles.css') }}">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" >
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" >
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.bundle.min.js" >
+
+        <link href="/assets/css/style.css" rel="stylesheet">
+
     </head>
     <body>
         {% block body %}{% endblock %}
