--- a/back/app/Resources/views/profil/edit.html.twig
+++ b/back/app/Resources/views/profil/edit.html.twig
@@ -1,12 +1,23 @@
-{% block content %}
-<h4>Modifier mes informations</h4>
-</div>
-<div class="card-body text-info">
-    {{ form_start(edit_form) }}
-    {{ form_widget(edit_form) }}
+{% extends 'base.html.twig' %}
 
-</div>
-<div class="card-footer">
-    <input class="btn btn-info" type="submit" value="Enregistrer" />
-    {{ form_end(edit_form) }}
+{% block body %}
+    <div class="container apartment text-center marginTopHeader">
+
+        <div class="textBigger mt-3">
+            <div class="card border-info mb-3">
+                <div class="card-header test">
+                    <h4 ">Modifier mes informations</h4>
+                </div>
+                <div class="card-body text-info">
+                    {{ form_start(edit_form) }}
+                    {{ form_widget(edit_form) }}
+
+                </div>
+                <div class="card-footer">
+                    <input class="btn btn-info" type="submit" value="Enregistrer" />
+                    {{ form_end(edit_form) }}
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
