--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -3,3 +3,13 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+@media all and (max-width: 768px) { 
+  #NavBarV{
+    display:none;
+  }
+  #SideMenuMain{
+    display:none;
+  }
+}
+
