--- a/back/app/Resources/views/profil/project_list.html.twig
+++ b/back/app/Resources/views/profil/project_list.html.twig
@@ -26,14 +26,17 @@
             </tr>
         </thead>
         <tbody>
+
             <tr>
                 <td class="align-middle w-20">
                     <a class="color-black"><span class="fas mr-2"></span>{{ project.projectTitle }}</a>
                 </td>
+        {% if project.mainPicture %}
                 <td class="align-middle w-20">
                     <img class="main-picture-thumbnails" src="{{ project.mainPicture.pictureUrl }}"
                          alt="picture-{{ project.mainPicture.pictureTitle }}"/>
                 </td>
+            {% endif %}
                 <td class="align-middle text-left w-40">
                     <p class="p-2">{{ project.projectDescription }}</p>
                 </td>
@@ -57,6 +60,7 @@
                 </tr>
             </thead>
             <tbody>
+
             {% for picture in project.pictures %}
                 <tr>
                     <td class="align-middle">{{ picture.pictureTitle }}</td>
@@ -76,6 +80,7 @@
                     </td>
                     {% endfor %}
                 </tr>
+
             </tbody>
         </table>
         <a class="btn btn-primary text-white ml-auto m-2"
