--- a/back/app/Resources/views/profil/index.html.twig
+++ b/back/app/Resources/views/profil/index.html.twig
@@ -7,25 +7,13 @@
 {% block body %}
 
     <div class="container apartment text-center marginTopHeader">
-        <h1>Bonjour {{ app.user}}</h1>
-        <div>
-            <a class="btn btn-success ml-auto m-2"
-               href="{{  path('back.skill') }}"><span class="fas fa-plus-square mr-2"></span>Ajouter une compétence à mon profil</a>
-        </div>
-        <div>
-            <a class="btn btn-success ml-auto m-2"
-           href="{{  path('project_add') }}"><span class="fas fa-plus-square mr-2"></span>Ajouter un projet à votre portfolio</a>
-        </div>
-        <div>
-            <a class="btn btn-success ml-auto m-2"
-               href="{{  path('back.experiences') }}"><span class="fas fa-plus-square mr-2"></span>Ajouter une expérience à mon profil</a>
-        </div>
 
         <div class="textBigger mt-3">
             <div class="card border-info mb-3">
                 <div class="card-header">
                     <h4>Mon profil</h4>
                 </div>
+                <h1>Bonjour {{ app.user.profil.firstName}}</h1>
                 <div class="card-body text-info">
                     <img src="{{ user.profilPicture}}">
                 </div>
@@ -59,6 +47,23 @@
                 </div>
                 <div class="card-body text-info">
                     Photo de couverture : <br><img src="{{ user.coverPicture}}">
+                </div>
+                <div>
+                    <a class="btn btn-success ml-auto m-2"
+                       href="{{  path('back.user.edit') }}"><span class="fas fa-plus-square
+                       mr-2"></span>Modifier votre profil</a>
+                </div>
+                <div>
+                    <a class="btn btn-success ml-auto m-2"
+                       href="{{  path('back.skill') }}"><span class="fas fa-plus-square mr-2"></span>Ajouter une compétence à mon profil</a>
+                </div>
+                <div>
+                    <a class="btn btn-success ml-auto m-2"
+                       href="{{  path('project_add') }}"><span class="fas fa-plus-square mr-2"></span>Ajouter un projet à votre portfolio</a>
+                </div>
+                <div>
+                    <a class="btn btn-success ml-auto m-2"
+                       href="{{  path('back.experiences') }}"><span class="fas fa-plus-square mr-2"></span>Ajouter une expérience à mon profil</a>
                 </div>
 
             </div>
