--- a/back/app/Resources/views/profil/index.html.twig
+++ b/back/app/Resources/views/profil/index.html.twig
@@ -7,7 +7,7 @@
 {% block body %}
 
     <div class="container apartment text-center marginTopHeader">
-        <h1>Bonjour {{ app.user}}</h1>
+        <h1>Bonjour </h1>
         <div>
             <a class="btn btn-success ml-auto m-2"
                href="{{  path('back.skill') }}"><span class="fas fa-plus-square mr-2"></span>Ajouter une compétence à mon profil</a>
