--- a/back/app/Resources/views/profil/index.html.twig
+++ b/back/app/Resources/views/profil/index.html.twig
@@ -10,45 +10,15 @@
                 <div class="card-header">
                     <h4>Mon profil</h4>
                 </div>
-                <h1>Bonjour {{ app.user.profil.firstName}}</h1>
+                <h1>Bonjour {{ app.user.profil.firstName | default}}</h1>
                 <div class="card-body text-info">
-                    <img src="{{ user.profilPicture}}">
+                    <img src=" {{ app.user.profil.firstName | default}}">
                 </div>
-                <div class="row">
-                    <div class="card-body text-info">
-                        Prénom : {{ user.firstName }}
-                    </div>
-                    <div class="card-body text-info">
-                        Nom : {{ user.lastName }}
-                    </div>
-                    <div class="card-body text-info">
-                        Adresse : {{ user.adress }}
-                    </div>
-                    <div class="card-body text-info">
-                        Numéro de téléphone : {{ user.phoneNumber }}
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="card-body text-info">
-                        Promo Wilds : {{ user.wildPromo }}
-                    </div>
-                    <div class="card-body text-info">
-                        Titre de votre profil : {{ user.profilTitle }}
-                    </div>
-                    <div class="card-body text-info">
-                        Votre description : {{ user.profilDescription }}
-                    </div>
-                    <div class="card-body text-info">
-                        Votre CV : {{ user.cvLink }}
-                    </div>
-                </div>
-                <div class="card-body text-info">
-                    Photo de couverture : <br><img src="{{ user.coverPicture}}">
-                </div>
+
                 <div>
                     <a class="btn btn-success ml-auto m-2"
-                       href="{{  path('back.user.edit') }}"><span class="fas fa-plus-square
-                       mr-2"></span>Modifier votre profil</a>
+                       href="{{ path('back.user.edit', { 'profil_id': user.id }) }}"><span class="fas
+fa-plus-square mr-2"></span>Modifier votre profil</a>
                 </div>
                 <div>
                     <a class="btn btn-success ml-auto m-2"
