--- a/back/app/Resources/views/profil/index.html.twig
+++ b/back/app/Resources/views/profil/index.html.twig
@@ -4,19 +4,6 @@
 {% block body %}
 
     <div class="container apartment text-center marginTopHeader">
-        <h1>Bonjour </h1>
-        <div>
-            <a class="btn btn-success ml-auto m-2"
-               href="{{  path('back.skill') }}"><span class="fas fa-plus-square mr-2"></span>Ajouter une compétence à mon profil</a>
-        </div>
-        <div>
-            <a class="btn btn-success ml-auto m-2"
-           href="{{  path('project_add') }}"><span class="fas fa-plus-square mr-2"></span>Ajouter un projet à votre portfolio</a>
-        </div>
-        <div>
-            <a class="btn btn-success ml-auto m-2"
-               href="{{  path('back.experiences') }}"><span class="fas fa-plus-square mr-2"></span>Ajouter une expérience à mon profil</a>
-        </div>
 
         <div class="textBigger mt-3">
             <div class="card border-info mb-3">
@@ -25,8 +12,40 @@
                 </div>
                 <h1>Bonjour {{ app.user.profil.firstName | default}}</h1>
                 <div class="card-body text-info">
-                    <img src=" {{ app.user.profil.firstName | default}}">
+                    <img src=" {{ user.profilPicture}}">
                 </div>
+                <div class="row">
+                    <div class="card-body text-info">
+                         Prénom : {{ user.firstName}}
+                    </div>
+                    <div class="card-body text-info">
+                         Nom : {{ user.lastName}}
+                    </div>
+                    <div class="card-body text-info">
+                         Adresse : {{ user.adress}}
+                    </div>
+                    <div class="card-body text-info">
+                         Numéro Téléphone : {{ user.phoneNumber}}
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="card-body text-info">
+                         Promotion : {{ user.wildPromo}}
+                    </div>
+                    <div class="card-body text-info">
+                         Mobilitié : {{ user.workingArea}}
+                    </div>
+                    <div class="card-body text-info">
+                         Titre profil : {{ user.profilTitle}}
+                    </div>
+                    <div class="card-body text-info">
+                         Description : {{ user.profilDescription}}
+                    </div>
+                </div>
+                <div class="card-body text-info">
+                    <img src=" {{ user.coverPicture}}">
+                </div>
+
 
                 <div>
                     <a class="btn btn-success ml-auto m-2"
