ajout des couleurs et du logo

--- a/back/app/Resources/views/profil/skill.html.twig
+++ b/back/app/Resources/views/profil/skill.html.twig
@@ -4,7 +4,7 @@
     <section class="container-fluid">
 
 
-        <div class="row">
+        <div class="row d-flex justify-content-center">
 
             <div class="col-6 offset-3 m-2">
                 <h1>Ajout d'une compétence</h1>
