--- a/back/app/Resources/views/base.html.twig
+++ b/back/app/Resources/views/base.html.twig
@@ -14,6 +14,14 @@
 
     </head>
     <body>
+        {% for label, messages in app.flashes %}
+            {% for message in messages %}
+                <div class="alert alert-{{ label }}">
+                    {{ message }}
+                </div>
+            {% endfor %}
+        {% endfor %}
+
         {% block body %}{% endblock %}
         {% block javascripts %}
             <script
