--- a/back/web/assets/css/style.css
+++ b/back/web/assets/css/style.css
@@ -54,5 +54,12 @@
 }
 
 .logo{
-    position: absolute;
+    position: fixed;
+    top:0;
+    left:0;
+    z-index:100;
+}
+
+.cent{
+    height: 100vh;
 }
